# minishell

./: .gitignore  CMakeLists.txt  Makefile  cmd_env.c  cmd_pwd.c  minishell  minishell.c  minishell.h  parser.c  parser.h  parser4.c  read_arg.c  sort_list.c
drina/: Makefile  Makefile1  add_back.c  add_equal.c  all_envp.c  cmd_env.c  cmd_pipe.c  cmd_pwd.c  cmd_unset.c  commands.c  diff_cmd.c  error_and_free.c  exit_cmd.c  find_len_arg.c  ft_lstsize_arg.c  get_arg.c  get_copy_all.c  get_env_args.c  get_home_dir.c  get_name_env.c  last_spec.c  lst_env.c  lst_new_env.c  lstnew.c  minishell.c  minishell.h  minishelldrina.h  no_system_cmd.c  parser.c  parser.h  path_bin.c  print_export.c  redact_env.c  redirect.c  select_cmd.c  sort_list.c  start_programm.c  struct_funcs.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+8 more)
lmidori/: CMakeLists.txt  Makefile  add_back.c  add_equal.c  add_new_env.c  check.c  cmd_cd.c  cmd_echo.c  cmd_env.c  cmd_exit.c  cmd_export.c  cmd_pipe.c  cmd_pwd.c  cmd_unset.c  commands.c  diff_cmd.c  double_spec.c  enter_cd.c  error_and_free.c  ffff  find_in_env.c  find_len_arg.c  free_list_copy.c  ft_lstsize_arg.c  get_arg.c  get_env_args.c  get_name_env.c  get_value_env.c  init_arg_env.c  init_env.c  last_spec.c  lst_args.c  lst_env.c  lst_new_env.c  lstnew.c  minishell  minishell.c  minishell.h  minishelldrina.c  minishelldrina.h  (+16 more)
