cmake_minimum_required(VERSION 3.17)
project(myminishell C)

set(CMAKE_C_STANDARD 11)

include_directories(drina)
include_directories(libft)
include_directories(lmidori)

add_executable(myminishell
    drina/add_equal.c
    drina/cmd_env.c
    drina/cmd_pwd.c
    drina/minishelldrina.h
    drina/sort_list.c
    libft/ft_atoi.c
    libft/ft_bzero.c
    libft/ft_calloc.c
    libft/ft_isalnum.c
    libft/ft_isalpha.c
    libft/ft_isascii.c
    libft/ft_isdigit.c
    libft/ft_isprint.c
    libft/ft_itoa.c
    libft/ft_lstadd_back.c
    libft/ft_lstadd_front.c
    libft/ft_lstclear.c
    libft/ft_lstdelone.c
    libft/ft_lstiter.c
    libft/ft_lstlast.c
    libft/ft_lstmap.c
    libft/ft_lstnew.c
    libft/ft_lstsize.c
    libft/ft_memccpy.c
    libft/ft_memchr.c
    libft/ft_memcmp.c
    libft/ft_memcpy.c
    libft/ft_memmove.c
    libft/ft_memset.c
    libft/ft_putchar_fd.c
    libft/ft_putendl_fd.c
    libft/ft_putnbr_fd.c
    libft/ft_putstr_fd.c
    libft/ft_split.c
    libft/ft_strchr.c
    libft/ft_strdup.c
    libft/ft_strjoin.c
    libft/ft_strlcat.c
    libft/ft_strlcpy.c
    libft/ft_strlen.c
    libft/ft_strmapi.c
    libft/ft_strncmp.c
    libft/ft_strnstr.c
    libft/ft_strrchr.c
    libft/ft_strtrim.c
    libft/ft_substr.c
    libft/ft_tolower.c
    libft/ft_toupper.c
    libft/get_next_line.c
    libft/get_next_line.h
    libft/get_next_line_utils.c
    libft/libft.h
    lmidori/add_back.c
    lmidori/cmd_cd.c
    lmidori/diff_cmd.c
    lmidori/enter_cd.c
    lmidori/find_len_arg.c
    lmidori/get_env_args.c
    lmidori/init_arg_env.c
    lmidori/lst_args.c
    lmidori/lstnew.c
    lmidori/minishell.c
    lmidori/minishell.h
    lmidori/parser.c
    lmidori/parser.h
    lmidori/path_bin.c
    lmidori/read_arg.c
    lmidori/select_cmd.c
    lmidori/start_programm.c
    lmidori/struct_funcs.c)
