cmake_minimum_required(VERSION 3.17)
project(minishell C)

set(CMAKE_C_STANDARD 11)

include_directories(libft)
include_directories(lmidori)

add_executable(minishell
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strdup.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/get_next_line.h
        libft/get_next_line_utils.c
        libft/libft.h
        lmidori/add_new_env.c
        lmidori/check.c
        lmidori/cmd_cd.c
        lmidori/cmd_echo.c
        lmidori/cmd_env.c
        lmidori/cmd_exit.c
        lmidori/cmd_export.c
        lmidori/cmd_pipe.c
        lmidori/cmd_pwd.c
        lmidori/cmd_unset.c
        lmidori/diff_cmd.c
        lmidori/double_spec.c
        lmidori/error_and_free.c
        lmidori/find_in_env.c
        lmidori/find_len_arg.c
        lmidori/free_list_copy.c
        lmidori/get_arg.c
        lmidori/get_env_args.c
        lmidori/get_name_env.c
        lmidori/get_value_env.c
        lmidori/init_arg_env.c
        lmidori/last_spec.c
        lmidori/lst_args.c
        lmidori/lst_env.c
        lmidori/minishell.c
        lmidori/parser.c
        lmidori/parser.h
        lmidori/path_bin.c
        lmidori/print_export.c
        lmidori/read_arg.c
        lmidori/redact_env.c
        lmidori/redirect.c
        lmidori/select_cmd.c
        lmidori/special_parser.c
        lmidori/start_errors.c
        lmidori/start_programm.c
        lmidori/struct_funcs.c
        lmidori/xmalloc.c)
